fix panel overlaps in firefox

--- a/src/components/timeline/timeline.scss
+++ b/src/components/timeline/timeline.scss
@@ -11,6 +11,7 @@
 
   .conversation-heading {
     top: calc(var(--__panel-heading-height) * 2);
+    z-index: 1;
   }
 
   &.-nonpanel {
